fix youtube thumbnail size bug on mobile

--- a/memoMaker/src/components/youtube/youtube_item/youtube_item.module.css
+++ b/memoMaker/src/components/youtube/youtube_item/youtube_item.module.css
@@ -48,7 +48,7 @@
     width: 32vw;
   }
   .thumbnail.list {
-    width: 25em;
+    width: 8em;
   }
 
   .metadata {
